// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<VocabLevel /> should adopt props 1`] = `
<styled.div
  isActionable={true}
>
  <Styled(Component)
    title="View level 22 vocabulary"
    to="/vocabulary/level/22"
  >
    <styled.h2>
      Level 
      22
    </styled.h2>
  </Styled(Component)>
  <Styled(LockButton)
    handleClick={[Function]}
    isActionable={true}
    isLocked={false}
    title="Lock level 22"
  />
</styled.div>
`;

exports[`<VocabLevel /> should match baseline snapshot 1`] = `
<styled.div
  isActionable={false}
>
  <Styled(Component)
    title="View level 12 vocabulary"
    to="/vocabulary/level/12"
  >
    <styled.h2>
      Level 
      12
    </styled.h2>
  </Styled(Component)>
  <Styled(LockButton)
    handleClick={[Function]}
    isActionable={false}
    isLocked={true}
    title="Unlock level 12"
  />
</styled.div>
`;
